Fix: cm container partially visible in the new open custom css box fixes #5

--- a/back/assets/css/cm-customizer.css
+++ b/back/assets/css/cm-customizer.css
@@ -53,9 +53,11 @@
 #childify-container input[type=radio] {
     float: none;
 }
+.section-open #childify-container,
 .in-sub-panel #childify-container {
     left: -450px;
 }
+.rtl .section-open #childify-container,
 .rtl .in-sub-panel #childify-container { 
     left: auto; right: -450px; height: 0;
 }
